--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -34,7 +34,7 @@ a {
 
   &__content {
     display: flex;
-    height: calc(100vh - $footer_height);
+    height: calc(100vh - #{$footer_height});
     padding: 20px;
     padding-bottom: 0;
   }
